--- a/css/main.css
+++ b/css/main.css
@@ -38,13 +38,102 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-.clearfix::after{
+.clearfix::after {
   content: "";
   position: relative;
   display: block;
   width: 100%;
   clear: both;
 }
+/* 안내창 */
+body.active {
+  overflow-y: auto;
+}
+.modal-wrap {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-main {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  text-align: center;
+  justify-content: center;
+  line-height: 50px;
+  width: 600px;
+  height: 500px;
+  border-radius: 50px;
+  position: relative;
+}
+.modal-nonotic {
+  font-size: 20px;
+  font-weight: 500;
+}
+.modal-nonotic strong {
+  color: red;
+  background: linear-gradient(to top, yellow 50%, transparent 50%);
+}
+.modal-close {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #d8d8d8;
+  border-radius: 0 0 50px 50px;
+}
+.modal-main .modal-logo {
+  width: 130px;
+  height: 130px;
+  background: url("../images/1213.png") no-repeat center #fff;
+  position: absolute;
+  left: 50%;
+  top: -70px;
+  transform: translate(-50%);
+  border-radius: 100px;
+  border: 5px solid ivory;
+  flex-direction: column;
+}
+/* .modal-nonotic {
+  width: 80%;
+  height: 40%;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 40px;
+  text-align: center;
+}
+.modal-nonotic strong {
+  color: #ed1c24;
+  font-weight: 500;
+  background: linear-gradient(to top, yellow 30%, transparent 30%);
+}
+.modal-nonotic span {
+  font-size: 13px;
+}
+.modal-close {
+  width: 100%;
+  height: 60px;
+  background-color: ivory;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  top: 450px;
+  left: 0;
+  border-radius: 0 0 40px 40px;
+}
+.modal-close i {
+  display: inline-block;
+  font-size: 12px;
+} */
 /* 레이아웃 */
 .wrap {
   display: block;
@@ -208,6 +297,13 @@ body {
   height: 5px;
   background-color: rgb(237, 28, 36);
 }
+.visual-txt {
+  color: #fff;
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 420px;
+}
 .visual-bt {
   display: block;
 
@@ -234,15 +330,14 @@ body {
   padding: 100px 0;
   background-color: #f8f8f8;
 }
-.business-inner{
+.business-inner {
   position: relative;
   display: block;
 }
-.business-top{
+.business-top {
   margin-bottom: 70px;
- 
 }
-.business-title{
+.business-title {
   position: relative;
   display: block;
   font-size: 44px;
@@ -250,9 +345,9 @@ body {
   text-align: center;
   color: #111;
   padding-bottom: 31px;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
-.business-title::after{
+.business-title::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -264,20 +359,20 @@ body {
   height: 4px;
   background-color: #ed1c24;
 }
-.business-desc{
+.business-desc {
   text-align: center;
   margin-top: 30px;
 }
 /* 비지스 하단이미지 */
-.business-bottom{
+.business-bottom {
   position: relative;
   display: block;
 }
-.business-list{
+.business-list {
   position: relative;
   display: block;
 }
-.business-list li{
+.business-list li {
   position: relative;
   display: block;
   width: calc(100% / 5);
@@ -286,41 +381,41 @@ body {
   background-position: 0 0;
   float: left;
 }
-.business-list li:nth-child(1){
+.business-list li:nth-child(1) {
   background-position: calc(240px * 0) 0px;
 }
-.business-list li:nth-child(2){
+.business-list li:nth-child(2) {
   background-position: calc(240px * -1) 0px;
 }
-.business-list li:nth-child(3){
+.business-list li:nth-child(3) {
   background-position: calc(240px * -2) 0px;
 }
-.business-list li:nth-child(4){
+.business-list li:nth-child(4) {
   background-position: calc(240px * -3) 0px;
 }
-.business-list li:nth-child(5){
-  background-position:-960px 0px;
+.business-list li:nth-child(5) {
+  background-position: -960px 0px;
   /* background-position: calc(240px * -4) 0px; */
 }
-.business-list li a{
+.business-list li a {
   position: relative;
   display: block;
   width: 100%;
   height: 100%;
-  background-color: rgba(244, 128, 37 , 0);
+  background-color: rgba(244, 128, 37, 0);
   color: #fff;
   text-align: center;
   padding: 100px 0;
   font-size: 24px;
-transition:all 0.5s;
+  transition: all 0.5s;
 }
-.business-list li a:hover{
-  background-color: rgba(244, 128, 37 , 1);
+.business-list li a:hover {
+  background-color: rgba(244, 128, 37, 1);
 }
-.business-list li a::after{
+.business-list li a::after {
   content: "";
   display: block;
-  background:url("../images/bg_common.png");
+  background: url("../images/bg_common.png");
   position: absolute;
   bottom: 90px;
   /* left: calc(50% - 130px / 2); */
@@ -332,33 +427,33 @@ transition:all 0.5s;
   opacity: 0;
   transition: all 0.5s;
 }
-.business-list li a:hover::after{
+.business-list li a:hover::after {
   opacity: 1;
 }
-.business-list li:nth-child(1) a::after{
+.business-list li:nth-child(1) a::after {
   background-position: -168px 0;
 }
-.business-list li:nth-child(2) a::after{
+.business-list li:nth-child(2) a::after {
   background-position: -298px 0;
 }
-.business-list li:nth-child(3) a::after{
+.business-list li:nth-child(3) a::after {
   background-position: 0px -117px;
 }
-.business-list li:nth-child(4) a::after{
+.business-list li:nth-child(4) a::after {
   background-position: -136px -117px;
 }
-.business-list li:nth-child(5) a::after{
+.business-list li:nth-child(5) a::after {
   background-position: -276px -117px;
 }
 /* 뉴스 */
-.news{
+.news {
   position: relative;
   display: block;
   width: 100%;
   background-color: #ed1c24;
   padding: 55px 0px;
 }
-.news-bg{
+.news-bg {
   position: absolute;
   top: 0;
   left: 50%;
@@ -366,106 +461,102 @@ transition:all 0.5s;
   height: 100%;
   background-color: #58595b;
 }
-.news-inner{
+.news-inner {
   position: relative;
   display: block;
- 
 }
-.news-wrap{
+.news-wrap {
   position: relative;
   display: block;
   width: calc(50% - 95px);
 }
-.news-wrap:first-child{
+.news-wrap:first-child {
   float: left;
 }
-.news-wrap:last-child{
+.news-wrap:last-child {
   float: right;
 }
-.news-wrap h3{
+.news-wrap h3 {
   font-size: 32px;
   color: #fff;
   font-weight: 300;
   margin-bottom: 45px;
 }
-.news-content{
+.news-content {
   position: relative;
   display: block;
 }
-.news-list li{
+.news-list li {
   position: relative;
   display: block;
   padding: 25px 0;
-  border-top: 1px solid rgba(255,255,255,0.3);
- 
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
 }
-.news-list li a{
+.news-list li a {
   color: #fff;
   font-size: 16px;
   display: block;
   position: relative;
 }
-.news-list li a .news-txt{
+.news-list li a .news-txt {
   position: relative;
   display: block;
-  
-  /* 말줄임 "..." 표시하는 법 (너비가 꼭 있어야 함) */
-width: 50%;
-white-space: nowrap;
-text-overflow: ellipsis;
-overflow: hidden;
 
-} 
-.news-list li a::after{
+  /* 말줄임 "..." 표시하는 법 (너비가 꼭 있어야 함) */
+  width: 50%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.news-list li a::after {
   content: "";
   position: absolute;
   top: 0;
   right: 0;
   width: 48px;
   height: 23px;
-  background:url("../images/bg_common.png") no-repeat;
-background-position:0px -49px ;
+  background: url("../images/bg_common.png") no-repeat;
+  background-position: 0px -49px;
 }
 /* 뉴스 끝 */
 /* 고객센터 */
-.cs{
+.cs {
   position: relative;
   display: block;
   background-color: #f8f8f8;
- padding: 60px 0;
+  padding: 60px 0;
 }
-.cs-inner{
+.cs-inner {
   position: relative;
   display: block;
-  
+
   /* background-color: #fff; */
 }
-.cs-link{
+.cs-link {
   position: relative;
   display: block;
   /* width: 50%; */
-   width: calc(50% - 1px);
-   height: 200px;
-   padding: 40px 60px;
-   
-   float: left;
-  }
-  .cs-link:first-child{
-   
+  width: calc(50% - 1px);
+  height: 200px;
+  padding: 40px 60px;
+
+  float: left;
+}
+.cs-link:first-child {
   height: 100%;
   /* float: left; */
-  background: url("../images/bg_faq.png")no-repeat #ffffff;
+  background: url("../images/bg_faq.png") no-repeat #ffffff;
   background-position: calc(100% - 50px);
 }
-.cs-link:last-child{
-margin-left: 1px;
+.cs-link:last-child {
+  margin-left: 1px;
   /* float: right; */
   height: 100%;
-  background: url("../images/bg_custom.png")no-repeat #ffffff;
+  background: url("../images/bg_custom.png") no-repeat #ffffff;
   background-position: calc(100% - 50px);
   /* border-left: 2px solid #f8f8f8; */
 }
-.cs-link h3{
+.cs-link h3 {
   position: relative;
   display: block;
   color: #000;
@@ -474,19 +565,19 @@ margin-left: 1px;
   margin-bottom: 20px;
 }
 /* 회사소개 */
-.about{
+.about {
   position: relative;
   display: block;
   padding: 100px 0;
   background-color: #fff;
 }
 
-.about-inner{
+.about-inner {
   position: relative;
   display: block;
 }
 
-.about-top{
+.about-top {
   position: relative;
   display: block;
   background: url("../images/img_about.png") no-repeat;
@@ -494,7 +585,7 @@ margin-left: 1px;
   margin-bottom: 80px;
 }
 
-.about-top > h2{
+.about-top > h2 {
   position: relative;
   display: block;
   font-size: 44px;
@@ -505,7 +596,7 @@ margin-left: 1px;
   text-transform: uppercase;
 }
 
-.about-top > p{
+.about-top > p {
   position: relative;
   display: block;
   font-size: 15px;
@@ -513,7 +604,7 @@ margin-left: 1px;
   padding-bottom: 70px;
 }
 
-.about-top > p > b{
+.about-top > p > b {
   position: relative;
   display: block;
   font-size: 21px;
@@ -522,7 +613,7 @@ margin-left: 1px;
   padding-bottom: 25px;
 }
 
-.about-top > p::before{
+.about-top > p::before {
   content: "";
   position: absolute;
   left: 0;
@@ -534,24 +625,23 @@ margin-left: 1px;
   left: 0;
 }
 /* 아이콘 */
-.about-bottom{
+.about-bottom {
   position: relative;
   display: block;
   text-align: center;
-
 }
-.about-list{
+.about-list {
   position: relative;
   /* display: block; */
   display: inline-block;
-  background-color: blanchedalmond;
+  /* background-color: blanchedalmond; */
 }
-.about-list li{
+.about-list li {
   position: relative;
   display: block;
   float: left;
 }
-.about-list li a{
+.about-list li a {
   position: relative;
   /* display: block; */
   display: inline-block;
@@ -559,65 +649,137 @@ margin-left: 1px;
   color: #111;
   font-weight: 500;
 }
-.about-list li a::before{
+.about-list li a::before {
   content: "";
   position: relative;
   display: block;
   width: 110px;
   height: 108px;
-  background: url("../images/bg_icon.png")no-repeat;
+  background: url("../images/bg_icon.png") no-repeat;
   margin-bottom: 25px;
 }
-.about-list li:nth-child(1) a::before{
+.about-list li:nth-child(1) a::before {
   background-position: 0 0;
 }
-.about-list li:nth-child(2) a::before{
+.about-list li:nth-child(2) a::before {
   background-position: -110px 0;
-  
 }
-.about-list li:nth-child(2){
+.about-list li:nth-child(2) {
   /* margin: 0 200px; */
   width: 560px;
-  
+
+  /* background-color: #ed1c24; */
 }
-.about-list li:nth-child(3) a::before{
+.about-list li:nth-child(3) a::before {
   background-position: 0 0;
 }
 /* 하단 */
-.footer{
+.footer {
   position: relative;
   display: block;
   padding: 50px 0;
   background-color: #4e4e4e;
 }
-.footer-inner{
+.footer-inner {
   position: relative;
   display: block;
 }
-.footer-logo{
+.footer-logo {
   position: relative;
   display: block;
   float: left;
   margin-right: 130px;
-
 }
-.footer-info{
+.footer-info {
   position: relative;
   display: block;
   float: left;
 }
-.footer-list{
+.footer-list {
   position: relative;
   display: block;
 }
-.footer-list li{
+.footer-list li {
   position: relative;
   display: block;
   font-size: 13px;
   color: #c3c3ce;
   margin-bottom: 5px;
 }
-.footer-list li address{
+.footer-list li address {
   /* address 하면 기울어지기 때문에 스타일 normal로 똑바로 세움 */
   font-style: normal;
+}
+/* top 버튼 */
+.top-button {
+  position: fixed;
+
+  right: 30px;
+  bottom: 60px;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 10px;
+}
+
+.top-button .chat-btn span {
+  position: absolute;
+  top: 30px;
+  right: 80px;
+  width: 180px;
+  background-color: #fff;
+  border-radius: 23px;
+  padding: 8px 10px;
+  text-align: center;
+  box-shadow: 0px 3px 7px 0 rgb(0, 0, 0, 0.3);
+  display: none;
+}
+.top-button .chat-btn:hover span {
+  display: block;
+}
+.top-button .chat-btn {
+  animation: updown 1.5s infinite;
+  /* -webkit-animation:updown 1.5s infinite; */
+  /* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
+}
+.top-button .shop-btn {
+  position: relative;
+  display: block;
+  width: 55px;
+  border-radius: 50%;
+  line-height: 55px;
+  background-color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  box-shadow: 0px 3px 7px 0 rgb(0, 0, 0, 0.3);
+  letter-spacing: 0.5px;
+}
+.top-button .top-btn {
+  background-color: #ed1c24;
+  width: 55px;
+  border-radius: 50%;
+  line-height: 55px;
+  text-align: center;
+}
+.top-button .top-btn img {
+  transform: rotate(180deg);
+}
+.top-button .top-btn img.up {
+  transform: rotate(0deg);
+  /* 이미지의 위아래를 전환시키기 위해 적용 */
+}
+/* 애내메이션 효과 */
+@keyframes updown {
+  0% {
+    transform: translatey(0);
+  }
+  50% {
+    transform: translatey(-10%);
+  }
+  100% {
+    transform: translatey(0);
+  }
 }
